made the delete mechanism for employees more robust and added dialogue box so that the deletion of the employee can be confirmed

--- a/frontend/src/app/components/employee/employee-list/employee-list.component.html
+++ b/frontend/src/app/components/employee/employee-list/employee-list.component.html
@@ -81,5 +81,5 @@
   [title]="'Delete Employee'"
   [message]="'Are you sure you want to delete ' + selectedEmployee?.name + '?'"
   (confirm)="confirmDelete()"
-  (cancel)="showDeleteConfirm = false">
+  (cancel)="cancelDelete()">
 </app-confirm-dialog>
